# srs

./: .editorconfig  .gitlab-ci.yml  Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: lib.rs  parser.rs  rustify.rs
lib/src/rustify/: flow.rs  fn.rs  list.rs  macros.rs  ops.rs  types.rs
lib/tests/: basics.rs  common.rs  enum.rs  ops.rs  struct.rs
sample/: hello.srs
src/: lib.rs  main.rs  parser.rs  rustify.rs
tests/: basics.rs  common.rs
