[package]
name = "srs"
description = "S-expression to Rust"
version = "0.1.0"
edition = "2021"
authors = ["Davide Peressoni"]
repository = "https://gitlab.com/DPDmancul/srs"
license = "GPL-3.0-or-later"
keywords = ["sexpr", "lisp", "s-expression", "rust"]
categories = ["no-std", "compilers"]

[dependencies]
itertools = {version = "0.10.2", default-features = false, features = [ "use_alloc" ]}
proc-macro2 = "1.0.36"

[dev-dependencies]
syn = { version = "1.0.89", default-features = false, features = ["parsing"] }
prettyplease = "0.1.7"

